changes finais (swagger)
